# fairweather

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: check.yml
fairweather/: cli.py
src/fairweather/: direction.py  formatters.py  main.py  tides.py
src/fairweather/tides/: api.py  cycle.py
src/fairweather/waves/: api.py  forecast.py
src/fairweather/winds/: api.py  forecast.py
tests/: example_response.json  example_response_waves.json  example_response_winds.json  test_direction.py  test_integration_flow.py  test_tide_api.py  test_tides_api.py  test_tides_cycle.py  test_waves_forecast.py  test_wind_api.py  test_wind_cycle.py  test_wind_forecast.py
