[tool.poetry]
name = "fairweather"
version = "0.1.0"
description = ""
authors = ["Nicholas Witthoeft <njwitthoeft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
