[project]
name = "fairweather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx[http2]>=0.28.1",
    "pydantic>=2.13.3",
    "ruff>=0.15.11",
]


[project.scripts]
fairweather = "fairweather:main.main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]
